bc > 전화걸기 팝업 b > 정산, 과금 조회  & 과금 대량수정

--- a/guide/list.html
+++ b/guide/list.html
@@ -714,7 +714,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">03정산</td>
                     <td class="d2">02정산산정</td>
                     <td class="d3">01조회</td>
@@ -722,9 +722,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-27</td>
                     <td class="ex_end">08-27</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-27</td>
+                    <td class="date_end">08-27</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -766,7 +766,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">03정산</td>
                     <td class="d2">06정산지급</td>
                     <td class="d3">01조회</td>
@@ -774,9 +774,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-27</td>
                     <td class="ex_end">08-27</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-27</td>
+                    <td class="date_end">08-27</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="do">
@@ -785,8 +785,8 @@
                     <td class="d3">02정산보고</td>
                     <td class="sbid"><span class="pc">SA030602</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start">08-27</td>
-                    <td class="ex_end">08-27</td>
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
@@ -811,8 +811,8 @@
                     <td class="d3">02등록</td>
                     <td class="sbid"><span class="pc">SA030702</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start">08-27</td>
-                    <td class="ex_end">08-27</td>
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
@@ -850,8 +850,8 @@
                     <td class="d3">02상세현황</td>
                     <td class="sbid"><span class="pc">SA030902</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start">08-27</td>
-                    <td class="ex_end">08-27</td>
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
@@ -863,89 +863,76 @@
                     <td class="d3">03일마감등록</td>
                     <td class="sbid"><span class="pc">SA030903</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start">08-27</td>
-                    <td class="ex_end">08-27</td>
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td>popup(lg)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">04과금</td>
                     <td class="d2">01과금관리</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA040101</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-27</td>
+                    <td class="ex_end">08-27</td>
+                    <td class="date_start">08-27</td>
+                    <td class="date_end">08-27</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">04과금</td>
                     <td class="d2">01과금관리</td>
                     <td class="d3">02대량수정</td>
                     <td class="sbid"><span class="pc">SA040102</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-27</td>
+                    <td class="ex_end">08-27</td>
+                    <td class="date_start">08-27</td>
+                    <td class="date_end">08-27</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">04과금</td>
                     <td class="d2">02출금신청</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA040201</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-27</td>
+                    <td class="ex_end">08-27</td>
+                    <td class="date_start">08-27</td>
+                    <td class="date_end">08-27</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">04과금</td>
                     <td class="d2">03특이업체관리</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA040301</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-27</td>
+                    <td class="ex_end">08-27</td>
+                    <td class="date_start">08-27</td>
+                    <td class="date_end">08-27</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
-                    <td class="d1">04과금</td>
-                    <td class="d2">03특이업체관리</td>
-                    <td class="d3">01조회</td>
-                    <td class="sbid"><span class="pc">SA040301</span><span class="mo"></span></td>
-                    <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
-                    <td></td>
-                </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">04과금</td>
                     <td class="d2">04입금기타관리</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA040401</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-27</td>
+                    <td class="ex_end">08-27</td>
+                    <td class="date_start">08-27</td>
+                    <td class="date_end">08-27</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="do">
@@ -1005,6 +992,71 @@
                     <td class="d2">07계산서조회</td>
                     <td class="d3">02수정세금계산서발행</td>
                     <td class="sbid"><span class="pc">SA040702</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">05배분</td>
+                    <td class="d2">01배분산정</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA050101</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">05배분</td>
+                    <td class="d2">02협력사배분조회</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA050201</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">05배분</td>
+                    <td class="d2">03은행수수료</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA050301</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td></td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">05배분</td>
+                    <td class="d2">03은행수수료</td>
+                    <td class="d3">02수수료이력</td>
+                    <td class="sbid"><span class="pc">SA050302</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start"></td>
+                    <td class="ex_end"></td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup(md)</td>
+                </tr>
+                <tr class="do">
+                    <td class="d1">05배분</td>
+                    <td class="d2">04은행후취수수료관리</td>
+                    <td class="d3">01조회</td>
+                    <td class="sbid"><span class="pc">SA050401</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start"></td>
                     <td class="ex_end"></td>
