--- a/guide/list_other.html
+++ b/guide/list_other.html
@@ -216,7 +216,7 @@
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
                     <td class="state" data-state="done"></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01GNB</td>
@@ -229,7 +229,7 @@
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
                     <td class="state" data-state="done"></td>
-                    <td>popup(900)</td>
+                    <td>popup(900-lg)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01GNB</td>
@@ -242,7 +242,7 @@
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
                     <td class="state" data-state="done"></td>
-                    <td>popup(600)</td>
+                    <td>popup(600-md)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01GNB</td>
@@ -255,7 +255,7 @@
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
                     <td class="state" data-state="done"></td>
-                    <td>popup(450)</td>
+                    <td>popup(450-xsm)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01GNB</td>
@@ -268,7 +268,7 @@
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
                     <td class="state" data-state="done"></td>
-                    <td>popup(900)</td>
+                    <td>popup(900-lg)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01GNB</td>
@@ -281,9 +281,9 @@
                     <td class="date_start">08-26</td>
                     <td class="date_end">08-26</td>
                     <td class="state" data-state="done"></td>
-                    <td>popup(900)</td>
+                    <td>popup(900-lg)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01GNB</td>
                     <td class="d2">03전화걸기</td>
                     <td class="d3"></td>
@@ -291,10 +291,10 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">09-01</td>
                     <td class="ex_end">09-01</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
-                    <td>popup(410)</td>
+                    <td class="date_start">08-27</td>
+                    <td class="date_end">08-27</td>
+                    <td class="state" data-state="done"></td>
+                    <td>popup(410-sm)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">01GNB</td>
@@ -307,7 +307,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(960)</td>
+                    <td>popup(960-xl)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">01GNB</td>
@@ -320,7 +320,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(600)</td>
+                    <td>popup(600-md)</td>
                 </tr>
                 <tr class="del">
                     <td class="d1">02업체주요정보</td>
@@ -372,7 +372,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(410)</td>
+                    <td>popup(410-sm)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">02업체주요정보</td>
@@ -385,7 +385,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(410)</td>
+                    <td>popup(410-sm)</td>
                 </tr>
                 <tr class="del">
                     <td class="d1">03업체상세정보</td>
@@ -424,7 +424,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">03업체상세정보</td>
@@ -437,7 +437,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="del">
                     <td class="d1">03업체상세정보</td>
@@ -476,7 +476,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(800)</td>
+                    <td>popup(800-md2)</td>
                 </tr>
                 <tr class="del">
                     <td class="d1">03업체상세정보</td>
@@ -593,7 +593,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="del">
                     <td class="d1">05상담관리</td>
@@ -619,7 +619,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="del">
                     <td class="d1">05상담관리</td>
@@ -710,7 +710,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">05상담관리</td>
@@ -723,7 +723,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">05상담관리</td>
@@ -736,7 +736,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">05상담관리</td>
@@ -749,7 +749,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">05상담관리</td>
@@ -762,7 +762,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">05상담관리</td>
@@ -775,7 +775,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(450)</td>
+                    <td>popup(450-xsm)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">05상담관리</td>
@@ -788,7 +788,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(450)</td>
+                    <td>popup(450-xsm)</td>
                 </tr>
                 <tr class="del">
                     <td class="d1">05상담관리</td>
@@ -814,7 +814,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state="del"></td>
-                    <td>popup(800)</td>
+                    <td>popup(800-md2)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">05상담관리</td>
@@ -827,7 +827,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(800)</td>
+                    <td>popup(800-md2)</td>
                 </tr>
                 <tr class="del">
                     <td class="d1">05상담관리</td>
@@ -853,7 +853,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="del">
                     <td class="d1">05상담관리</td>
@@ -905,7 +905,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">05상담관리</td>
@@ -918,7 +918,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">05상담관리</td>
@@ -931,7 +931,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(700)</td>
+                    <td>popup(700-xmd)</td>
                 </tr>
                 <tr class="del">
                     <td class="d1">05상담관리</td>
