--- a/pages/BC/BC010301.html
+++ b/pages/BC/BC010301.html
@@ -19,38 +19,27 @@
         </div>
 
         <div data-role="dialog"
-             data-title="엑셀 업로드"
+             data-title="전화걸기"
              data-modal="false"
              data-bind="dialogOpen: isVisible,
-                            events: { close: onClose}" class="xsm">
+                            events: { close: onClose}" class="sm">
             <div class="content-group">
-                <div class="title-box sm mt-0">
-                    <span class="upload-title">
-                        * 1회 100건까지 등록 가능합니다
-                    </span>
-                    <button data-role="button" class="light-green"><span>샘플파일</span></button>
-                </div>
-                <div class="upload-box">
-                    <div class="upload type2">
-                        <input type="file"
-                        id="viewModel_fileUpload_default"
-                            name="files"
-                            type="file"
-                            data-role="upload"
-                            data-multiple="false"
-                            data-validation= "{
-                                allowedExtensions: ['.jpg', '.jpeg', '.png', '.bmp', '.gif']
-                            }"
-                            data-show-file-list= "true"
-                            data-localization="{select: '파일 선택'}"
-                            data-async="{ saveUrl: 'save', removeUrl: 'remove', autoUpload: true }"
-                            data-bind="visible: isVisible,
-                                        enabled: isEnabled" 
-                        >
-                    </div> 
-                </div>
-                <div class="btn-box bottom">
-                    <button data-role="button"><span>등록</span></button>
+                <div class="table-group">
+                    <div class="search-control">
+                        <div class="form-group w100">
+                            <span class="label">대상</span> 
+                            <div class="form-set">
+                                <select data-role="dropdownlist" data-value="이용기관" data-option-label="이용기관" class="sm">
+                                    <option value="1">온라인</option>
+                                    <option value="2">오프라인</option>
+                                </select>
+                                <input type="text" class="h-input" placeholder="전화번호를 입력해 주세요.">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btn-box bottom">
+                        <button data-role="button" class="">전화걸기</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -100,17 +89,9 @@
 
         });
         kendo.bind($(".wrap"), viewModel);
-
-        var viewModel_fileUpload_default = kendo.observable({
-            isEnabled: true,
-            isVisible: true,
-        });
-        kendo.ui.Upload.fn._supportsDrop = function() { return false; } //drag drop 없음
-        setTimeout(function() {
-            kendo.bind($("#viewModel_fileUpload_default"), viewModel_fileUpload_default); 
-        }, 100)
        
-    </script> 
+       
+    </script>
 </body>
 
 </html>
